# BulletHell

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  conanfile.txt
playerData/Default/: playerdata.txt
src/: Application.cpp  Application.h  Application.hpp  AssetManager.hpp  AssetManager.tpp  GameState.cpp  GameState.hpp  Globals.hpp  Main.cpp  ResourceManager.cpp  ResourceManager.hpp  SplashState.cpp  SplashState.hpp  State.cpp  State.hpp  StateManager.cpp  StateManager.hpp  boss.hpp  bullet.cpp  bullet.hpp  fs.hpp  game.cpp  game.h  game.hpp  globals.hpp  main.cpp  player.cpp  player.hpp  state.hpp
src/Entities/: Boss.cpp  Boss.hpp  Bullet.cpp  Bullet.hpp  Button.cpp  Button.hpp  Player.cpp  Player.hpp  Splash.cpp  Splash.hpp  UIElement.cpp  UIElement.hpp  UIManager.cpp  UIManager.hpp  boss.hpp  player.cpp  player.hpp
src/States/: GameState.cpp  GameState.hpp  IntroState.cpp  IntroState.hpp  MenuState.cpp  MenuState.hpp  ProfileState.cpp  ProfileState.hpp  SettingState.cpp  SettingState.hpp  State.cpp  State.hpp  state.cpp  state.hpp
src/customObjects/: menuButton.cpp  menuButton.hpp
src/game/: game.cpp  game.hpp
src/gameStates/: MenuScreen.cpp  MenuScreen.h  MenuScreen.hpp  SplashScreen.cpp  SplashScreen.h
src/player/: player.cpp  player.hpp
src/resourceManager/: resourceManager.hpp
src/stateManager/: StateManager.h  state.hpp  stateManager.cpp  stateManager.hpp
src/stateManager/states/: State.h  loadingState.hpp  splashState.cpp  splashState.hpp
src/user/: user.hpp
srcOld/: main.cpp
srcOld/game/: game.cpp
srcOld/gameStates/: MenuScreen.cpp  SplashScreen.cpp  SplashScreen.hpp
srcOld2/: main.cpp
srcOld2/game/: game.cpp  game.hpp
srcOld2/resourceManager/: resourceManager.cpp
srcOld2/stateManager/: stateManager.hpp
srcOld2/stateManager/states/: gameState.hpp  menuState.hpp  pauseState.hpp  splashState.cpp  splashState.hpp
srcOld2/user/: user.cpp
